tests/base/invalid/SetElemOf_CompileFail_1.whiley
import * from whiley.lang.*

void ::main(System.Console sys):
    xs = {1,2,3}
    if 1.23 ∈ xs:
        sys.out.println(Any.toString(1))
